# assyplan

./: .gitignore  20260320_220111_patch.md  20260320_223449_patch.md  20260320_232629_patch.md  AGENTS.md  SIMULATION_PERFORMANCE_OPTIMIZATION_PLAN.md  STABILITY_ANALYSIS.md  active-workfront-throttling-v1.md  active-workfront-throttling-v2.md  active-workfront-throttling-v3.md  data.txt  devplandoc.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.opencode/skills/dev-phase1/: SKILLS.md
.opencode/skills/dev-phase2/: SKILLS.md
.opencode/skills/dev-phase3/: SKILLS.md
.sisyphus/: ralph-loop.local.md
.sisyphus/plans/: dev-phase1.md  dev-phase2.md  dev-phase3.md
src/python/: data_io.py  data_loader.py  element_table.py  encoding.py  metrics.py  node_table.py  output_manager.py  precedent_graph.py  sequence_table.py  stability_validators.py  step_table.py  validators.py  workfront.py
src/rust/: .gitignore  Cargo.toml
src/rust/src/: lib.rs  main.rs  sim_engine.rs  sim_grid.rs  sim_trace.rs  stability.rs
src/rust/src/graphics/: axis_cube.rs  mod.rs  renderer.rs  sim_ui.rs  step_renderer.rs  ui.rs  view_state.rs
src/rust/tests/: regression_compare.rs
tests/python/: test_integration.py  test_phase2.py  test_precedent_graph.py  test_sequence_table.py  test_stability_validators.py  test_step_table.py  test_workfront.py
